--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -11,12 +11,12 @@
 
 <section>
   <div class="container">
-    <span class="text1">hey buddy</span>
+    <span class="text1">hey machn</span>
   </div>
 </section>
 <section class="index-banner">
   <div class="front-banner">
     <h1>sheik</h1>
-    <h2>i am a webdeveloper and cricket lover....</h2>
+    <h2>i am a disco dancer....</h2>
   </div>
 </section>
