back to original

--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -11,12 +11,12 @@
 
 <section>
   <div class="container">
-    <span class="text1">Vada yen machi valakka bajji.</span>
+    <span class="text1">Hey buddy.</span>
   </div>
 </section>
 <section class="index-banner">
   <div class="front-banner">
-    <h1>Bhavani</h1>
-    <h2>i am a disco dancer....</h2>
+    <h1>Sheik</h1>
+    <h2>i am a pubg and badminton pro ....</h2>
   </div>
 </section>
